# store-contracts

./: .gitignore  README.md  dapps-para.md  dapps.md  doc.md  package.json  redspot.config.ts
artifacts/: dai.contract  dai.json  erc20.contract  erc20.json  erc20_fixed.contract  erc20_fixed.json  erc20_issue.contract  erc20_issue.json  exchange.contract  exchange.json  exchange2.contract  exchange2.json  factory.contract  factory.json  lpt.contract  lpt.json  patralottery.contract  patralottery.json  patramaker.contract  patramaker.json  patrapixel.contract  patrapixel.json  patrapk.contract  patrapk.json
contracts/erc20-fixed/: Cargo.toml  lib.rs
contracts/erc20-issue/: Cargo.toml  lib.rs
contracts/patralottery/: Cargo.toml  lib.rs
contracts/patramaker/: Cargo.toml  lib.rs
contracts/patramaker/dai/: Cargo.toml  lib.rs
contracts/patramaker/erc20/: Cargo.toml
contracts/patrapixel/: Cargo.toml
contracts/patrapk/: Cargo.toml  lib.rs
contracts/patraswap/: Cargo.toml  lib.rs
contracts/patraswap/exchange/: Cargo.toml  lib.rs
contracts/patraswap/exchange2/: Cargo.toml  lib.rs
contracts/patraswap/lpt/: Cargo.toml  lib.rs
erc20/: lib.rs  package.json  redspot.config.ts
erc20/artifacts/: erc20-issue.json  erc20-issue.wasm  erc20.json  erc20.wasm  erc20_fixed.json  erc20_fixed.wasm  erc20_issue.json  erc20_issue.wasm
erc20/contracts/: Cargo.toml  lib.rs
erc20/contracts/erc20-fixed/: Cargo.toml
erc20/contracts/erc20-issue/: Cargo.toml  lib.rs
erc20/erc20-issue/: Cargo.toml  lib.rs
erc20/scripts/: deploy.js  stable-token.ts
erc20/tests/: erc20.test.ts
patralottery/: Cargo.toml  lib.rs  package.json
patralottery/artifacts/: patralottery.json  patralottery.wasm
patralottery/contracts/: Cargo.toml  lib.rs
patralottery/scripts/: deploy.ts
patralottery/tests/: lottery.test.ts
patramaker/: Cargo.toml  lib.rs  package.json
patramaker/artifacts/: patramaker.json  patramaker.wasm
patramaker/dai/: Cargo.toml  lib.rs
patrapixel/: Cargo.toml  lib.rs  package.json  redspot.config.ts
patrapixel-v1/artifacts/: patrapixel.json  patrapixel.wasm
patrapixel-v1/contracts/: Cargo.toml  lib.rs
patrapixel-v1/tests/: pixel.test.ts
patrapixel/artifacts/: patrapixel.json  patrapixel.wasm
patrapixel/contracts/: Cargo.toml  lib.rs
patrapixel/scripts/: deploy.js
patrapixel/tests/: pixel.test.ts
patrapk/: .gitignore  Cargo.toml  lib.rs  package.json
patrapk/artifacts/: patrapk.json  patrapk.wasm
patrapk/contracts/: Cargo.toml  lib.rs
patrapk/scripts/: deploy.ts
patrapk/tests/: pk.test.ts
patraswap/: .gitignore  Cargo.toml  README.md  lib.rs  package.json  redspot.config.ts
patraswap-multi/: Cargo.toml  lib.rs
patraswap-multi/exchange/: Cargo.toml  lib.rs
patraswap-multi/lpt/: Cargo.toml  lib.rs
patraswap-trait/exchange/: Cargo.toml  lib.rs
patraswap-trait/factory/: Cargo.toml  lib.rs
patraswap-trait/trait-exchange/: Cargo.toml  lib.rs
patraswap-trait/trait-factory/: Cargo.toml  lib.rs
patraswap-v0/: Cargo.toml  lib.rs
patraswap-v0/erc20/: Cargo.toml  lib.rs
patraswap-v0/exchange/: Cargo.toml  lib.rs
patraswap/artifacts/: erc20.json  erc20.wasm  exchange.json  exchange.wasm  exchange2.json  exchange2.wasm  factory.json  factory.wasm  lpt.json  lpt.wasm
patraswap/contracts/: Cargo.toml  lib.rs
patraswap/contracts/erc20/: Cargo.toml  lib.rs
patraswap/contracts/erc20-fixed/: Cargo.toml  lib.rs
patraswap/contracts/erc20-issue/: Cargo.toml  lib.rs
patraswap/contracts/exchange/: Cargo.toml  lib.rs
patraswap/contracts/exchange2/: Cargo.toml  lib.rs
patraswap/contracts/lpt/: Cargo.toml  lib.rs
patraswap/exchange/: Cargo.toml  lib.rs
patraswap/factory/: Cargo.toml
patraswap/scripts/: deploy.ts
patraswap/tests/: factory.test.ts
patraswap/trait-exchange/: Cargo.toml
patraswap/trait-factory/: Cargo.toml
scripts/: erc20.deploy.ts  patralottery.buy.ts  patralottery.deploy.ts  patralottery.draw.ts  patramaker.deploy.ts  patrapixel.deploy.ts  patrapk.deploy.ts  patraswap.deploy.ts  patraswap.initial.ts  stable-token.ts
solidity/cryptopixel/: cryptopixel.sol
tests/: erc20.test.ts  lottery.test.ts  maker.test.ts  pixel.test.ts  pk.test.ts  swap.test.ts
