[package]
name = "erc20_fixed"
version = "0.1.0"
authors = ["Patract Labs <tyler@patract.io>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.0", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

# metis_lang = { git = "https://github.com/patractlabs/metis", default-features = false }
# metis_erc20 = { git = "https://github.com/patractlabs/metis", default-features = false }
metis_lang = { path = "../../../metis/crates/lang", default-features = false }
metis_erc20 = { path = "../../../metis/crates/components/token/erc20", default-features = false }

[lib]
name = "erc20_fixed"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "metis_lang/std",
    "metis_erc20/std",
]
ink-as-dependency = []
