[package]
name = "patrapk"
version = "0.1.0"
authors = ["tyler <tyler@patract.io>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc2", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4.1", default-features = false, features = ["derive"], optional = true }

[lib]
name = "patrapk"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []

[profile.release]
overflow-checks = false

[patch."https://github.com/paritytech/ink"]
ink_primitives = { git = "https://github.com/patractlabs/ink", branch = "master" }
ink_metadata = { git = "https://github.com/patractlabs/ink", branch = "master" }
ink_env = { git = "https://github.com/patractlabs/ink", branch = "master" }
ink_storage = { git = "https://github.com/patractlabs/ink", branch = "master" }
ink_lang = { git = "https://github.com/patractlabs/ink", branch = "master" }
ink_prelude = { git = "https://github.com/patractlabs/ink", branch = "master" }
