[package]
name = "exchange"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false }
ink_metadata = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false }
ink_storage = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false }
ink_lang = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false }
ink_prelude = { version = "3.0.0-rc2", git= "https://github.com/paritytech/ink.git", branch = "aj-instantiate-salt", default-features = false }

scale = { package = "parity-scale-codec", version = "1.3", default-features = false, features = ["derive"] }
scale-info = { version = "0.4.1", default-features = false, features = ["derive"], optional = true }

erc20 = { package = "erc20", version = "0.1.0", git = "https://github.com/patractlabs/metis.git", branch = "erc20-stub", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "exchange"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "erc20/std",
]
ink-as-dependency = []
